Updated Vote-Alias method with graphs

--- a/notebooks/Dumb-LM.ipynb
+++ b/notebooks/Dumb-LM.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "She said this was aJGnZ!o&mAokT.FpfBM3k&zYTWNA\n",
-      "icB:-L'BltA;vRUazEfRELIRkYqgDWB'S;zIaBN!j,kjUPjVfiG:T'APtZueCkUY?BBe3SHP\n"
+      "She said this was ahpDzDkVIDbgNMkFvrIRx$WuH'tImZ-:Hw,Lu\n",
+      "&tS$gvfmpE$Jn:'ecHwMEEirylVvdXhcqaRa fe BqNehi&Ogj$hLSq3JJoE tU\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "She said this was as?T,a  tonaiSisvntai ed i thhBellnIbsR,agotoo.sne:noluthh:\n",
-      "ifre\n",
-      "o.alaTdo dibgee sio,aI,uo ryo i lelh\n"
+      "She said this was aar,iseo osTt tar\n",
+      "o eoy,   tt hio   plte\n",
+      "eEu,s n\n",
+      "Ld\n",
+      "Ntdhts alt hyg eearonhnopRbdh lanmd\n",
+      ":s sslHmnucHh\n"
      ]
     }
    ],
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,17 +270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "She said this was anje, ng Y:\n",
-      "T:\n",
-      "Myol es;\n",
-      "ARO:--tooristhang st I cthal opung fororonoucane-dkin ard th ind s hesuthid m\n"
+      "She said this was aisoleesthereathingeened,\n",
+      "Than widerdot cers nout bre maick's mpe HERCHN s isher'd buchant po ais sth\n"
      ]
     }
    ],
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,21 +299,19 @@
      "output_type": "stream",
      "text": [
       "Model0:\n",
-      "She said this was a-SATW\n",
-      "z&Ur3J:wfGVUVNWC$ONy-jKO'uU$v'l,mJ!htrdwBYIc\n",
+      "She said this was adzNY$OTqw YT,?zqAscwjxWHWsBJ&vAMeW,:x\n",
+      "'$RGYd:BeqxB\n",
       "\n",
       "\n",
       "Model1:\n",
-      "She said this was a uioeeknheIB gpIoIshynstlshwm?lbobb ,Ib;, ;\n",
-      "i\n",
-      "dndr\n",
+      "She said this was a\n",
+      "yLotuelreiaehea'ui n t RescokcvsrunsMtd.ereee\n",
+      "d p\n",
       "\n",
       "\n",
       "Model2:\n",
-      "She said this was an's.\n",
-      "\n",
-      "Wie her sesel\n",
-      "AREDUE ayamu pp hthisachthare \n",
+      "She said this was ar Thet thate th te, seare! crife ind,\n",
+      "LYorene tono\n",
       "\n",
       "\n"
      ]
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -370,15 +369,15 @@
      "output_type": "stream",
      "text": [
       "Model0:\n",
-      "She said this was a white again? planted Cushions, method, wise, behold men's pass'd Romans. vent comes Must, side saving senators, Ladders, covets certain themselves, Marry, requests movers fear. hell. Romans.' Brother alike. brave? natural\n",
+      "She said this was a Tyrants within. general;' wounds! Volsces? Cleave lover, flint, become't, defying merrier wits? cities Never, black, Romans humanely; strew Bestride minute Fourth he, dispositions, beginning. lots comforter Penelope: outdone town ears?\n",
       "\n",
       "\n",
       "Model1:\n",
-      "She said this was a by BRUTUS: duke. your But it lack i' were wealsmen Capitol-- make Only in or would think stopp'd my estimation my prey angry Volsce, i' stripes mother, hang I your\n",
+      "She said this was a have hark! my the this in thorough that To not, 'tis queen's dearer the my to dust. any assault follow as mockers, well a to my me, forbid LADY one\n",
       "\n",
       "\n",
       "Model2:\n",
-      "She said this was a humorous patrician, and parent. CORIOLANUS: I count my nature is left, Marcius: A weeder-out of wine. Second Citizen: But we the king, To your voices, I came, Ready to put\n",
+      "She said this was a consul Wish we stood to't in their charges, distinctly ranges, In thy life did but a soldier Even as nobly with a perfecter giber for Alexander. What then? what lies\n",
       "\n",
       "\n"
      ]
