--- a/notebooks/Micrograd-Scratch-v2.ipynb
+++ b/notebooks/Micrograd-Scratch-v2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,24 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.025188860212798078\n",
-      "50 0.01918036489079715\n",
-      "100 0.015308064337113184\n",
-      "150 0.01263980834088238\n",
-      "200 0.010706564046983363\n",
-      "250 0.00925039927048938\n",
-      "300 0.008119248146274387\n",
-      "350 0.007218324025923282\n",
-      "400 0.00648579655090566\n",
-      "450 0.005879782578930692\n",
-      "500 0.005370995122457957\n"
+      "0 0.0014458005295917042\n",
+      "50 0.0014070039685884052\n",
+      "100 0.0013701348405959727\n",
+      "150 0.0013350561260459255\n",
+      "200 0.0013016433239713683\n",
+      "250 0.001269783066783393\n",
+      "300 0.0012393719138216004\n",
+      "350 0.001210315297460792\n",
+      "400 0.0011825265998425735\n",
+      "450 0.0011559263418171755\n",
+      "500 0.0011304414685777042\n"
      ]
     }
    ],
@@ -307,11 +307,12 @@
     "  # forward pass\n",
     "  ypred = [n(x) for x in xs]\n",
     "  loss = sum((yout - ygt)**2 for ygt, yout in zip(ys, ypred))\n",
-    "  \n",
+    "\n",
     "  # backward pass\n",
     "  for p in n.parameters():\n",
     "    p.grad = 0.0\n",
     "  loss.backward()\n",
+    "\n",
     "  \n",
     "  # update\n",
     "  for p in n.parameters():\n",
@@ -339,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
